--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ public/hot
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
-# public_html/hot
+public_html/hot
 
 storage/*.key
 .env
